fix car jobs
